--- a/course4/week3-ungraded-labs/C4_W3_Lab_2_TFX_Custom_Components.ipynb
+++ b/course4/week3-ungraded-labs/C4_W3_Lab_2_TFX_Custom_Components.ipynb
@@ -720,7 +720,7 @@
       "source": [
         "### Standard ExampleGen code\n",
         "\n",
-        "TFX is open source so the code for standard components can easily be found the public [repo](https://github.com/tensorflow/tfx/tree/89d3cb6c59acd0d487916bff703711815f1506b5/tfx). We placed links in the following sections of the actual files that you'll be modifying/overriding in case you want to compare what was changed for your custom ExampleGen. \n",
+        "TFX is open source so the code for standard components can easily be found in the public [repo](https://github.com/tensorflow/tfx/tree/89d3cb6c59acd0d487916bff703711815f1506b5/tfx). We placed links in the following sections of the actual files that you'll be modifying/overriding in case you want to compare what was changed for your custom ExampleGen. \n",
         "\n",
         "The class heirarchy for these components is pretty deep but in summary, you will only need to modify three:\n",
         "\n",
