fix(C1 W2 ugl): pin TF version

--- a/course1/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
+++ b/course1/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
@@ -56,6 +56,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "lf52FgZbKbgi"
+   },
+   "outputs": [],
+   "source": [
+    "# Install compatible TensorFlow version\n",
+    "!pip install tensorflow==2.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "id": "LttdbzB5XB0O"
    },
    "outputs": [],
@@ -128,7 +140,7 @@
     "\n",
     "To guide you through this lab we have prepared a narrative that simulates a real life scenario:\n",
     "\n",
-    "Suppose you have been tasked to create a model that classifies images of cats, dogs and birds. For this you settle on a simple CNN architecture, since CNN's are known to perform well for image classification. You are probably familiar with two widely used datasets: `cats vs dogs`, and `caltech birds`. As a side note both datasets are available through `Tensforflow Datasets (TFDS)`. However, you decide NOT to use `TFDS` since the lab requires you to modify the data and combine the two datasets into one. \n",
+    "Suppose you have been tasked to create a model that classifies images of cats, dogs and birds. For this you settle on a simple CNN architecture, since CNN's are known to perform well for image classification. You are probably familiar with two widely used datasets: `cats vs dogs`, and `caltech birds`. As a side note both datasets are available through `Tensforflow Datasets (TFDS)`. However, you decide NOT to use `TFDS` since the lab requires you to modify the data and combine the two datasets into one.\n",
     "\n",
     "## Combining the datasets\n",
     "\n",
@@ -395,7 +407,7 @@
     "id": "oeqbprKcmr-0"
    },
    "source": [
-    "The first command removes all zero-byte files from the filesystem. The second one removes any file that does not have a `.jpg` extension. \n",
+    "The first command removes all zero-byte files from the filesystem. The second one removes any file that does not have a `.jpg` extension.\n",
     "\n",
     "This also serves as a reminder of the power of bash. Although you could achieve the same result with Python code, bash allows you to do this much quicker. If you are not familiar with bash or some other shell-like language we encourage you to learn some of it as it is a very useful tool for data manipulation purposes.\n",
     "\n",
@@ -425,7 +437,7 @@
     "id": "LSmRaN_Qm-s4"
    },
    "source": [
-    "It turns out that very few files presented the issues mentioned above. That's good news but it is also a reminder that small problems with the dataset might unexpectedly affect the training process. In this case, 4 non valid image files will have prevented you from training the model. \n",
+    "It turns out that very few files presented the issues mentioned above. That's good news but it is also a reminder that small problems with the dataset might unexpectedly affect the training process. In this case, 4 non valid image files will have prevented you from training the model.\n",
     "\n",
     "In most cases training Deep Learning models is a time intensive task, so be sure to have everything in place before starting this process.\n",
     "\n",
@@ -565,7 +577,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "9YjjV9iU78Ca"
@@ -692,11 +703,11 @@
    "outputs": [],
    "source": [
     "def get_training_metrics(history):\n",
-    "  \n",
+    "\n",
     "  # This is needed depending on if you used the pretrained model or you trained it yourself\n",
     "  if not isinstance(history, pd.core.frame.DataFrame):\n",
     "    history = history.history\n",
-    "  \n",
+    "\n",
     "  acc = history['sparse_categorical_accuracy']\n",
     "  val_acc = history['val_sparse_categorical_accuracy']\n",
     "\n",
@@ -712,7 +723,7 @@
     "id": "8OKRhD87E-V3"
    },
    "source": [
-    "Now, let's plot the metrics and losses for each training epoch as the training process progresses. "
+    "Now, let's plot the metrics and losses for each training epoch as the training process progresses."
    ]
   },
   {
@@ -753,7 +764,7 @@
     "id": "4mF4fltDFM6o"
    },
    "source": [
-    "From these two plots is quite evident that the model is overfitting the training data. However, the evaluation accuracy is still pretty high. Maybe class imbalance is not such a big issue after all. Perhaps this is too good to be true. \n",
+    "From these two plots is quite evident that the model is overfitting the training data. However, the evaluation accuracy is still pretty high. Maybe class imbalance is not such a big issue after all. Perhaps this is too good to be true.\n",
     "\n",
     "Let's dive a little deeper, and compute some additional metrics to explore if the class imbalance is hampering the model to perform well. In particular, let's compare: the accuracy score,  the accuracy score balanced, and the confusion matrix.  Information on the accuracy scores calculations is provided in the [sklearn](https://scikit-learn.org/stable/modules/model_evaluation.html#classification-metrics) documentation. To refresh ideas on what is a confusion matrix check [Wikipedia](https://en.wikipedia.org/wiki/Confusion_matrix)."
    ]
@@ -849,7 +860,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "e3tpDKCsT564"
@@ -1067,7 +1077,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Dp7QCgZ0Wuf3"
@@ -1110,7 +1119,7 @@
    "source": [
     "# Training with Data Augmentation\n",
     "\n",
-    "Augmenting images is a technique in which you create new versions of the images you have at hand, by applying geometric transformations. These transformations can vary from: zooming in and out, rotating, or even flipping the images. By doing this, you get a training dataset that exposes the model to a wider variety of images. This helps in further exploring the feature space and hence reducing the chances of overfitting. \n",
+    "Augmenting images is a technique in which you create new versions of the images you have at hand, by applying geometric transformations. These transformations can vary from: zooming in and out, rotating, or even flipping the images. By doing this, you get a training dataset that exposes the model to a wider variety of images. This helps in further exploring the feature space and hence reducing the chances of overfitting.\n",
     "\n",
     "It is also a very natural idea since doing slight (or sometimes not so slight) changes to an image will result in an equally valid image. A cat sitting in an awkward position is still a cat, right?"
    ]
@@ -1171,7 +1180,7 @@
     "Notice that the only difference with the previous training is that the `ImageDataGenerator` object now has some extra parameters. We encourage you to read more about this topic [here](https://keras.io/api/preprocessing/image/) if you haven't already. Also **this was only done to the training generator since this technique should only be applied to the training images.**\n",
     "\n",
     "\n",
-    "But what exactly are these extra parameters doing? \n",
+    "But what exactly are these extra parameters doing?\n",
     "\n",
     "Let's see these transformations in action. The following cell applies and displays different transformations for a single image:"
    ]
@@ -1296,7 +1305,7 @@
     "id": "d0hoorf7brwZ"
    },
    "source": [
-    "Since you know that class imbalance is no longer an issue there is no need to check for more in-depth metrics. \n",
+    "Since you know that class imbalance is no longer an issue there is no need to check for more in-depth metrics.\n",
     "\n",
     "Let's plot the training history right away:"
    ]
@@ -1320,7 +1329,7 @@
    "source": [
     "Now, the evaluation accuracy follows more closely the training one. This indicates that **the model is no longer overfitting**. Quite a remarkable finding, achieved by just augmenting the data set. Another option to handle overfitting is to include dropout layers in your model as mentioned earlier.\n",
     "\n",
-    "Another point worth mentioning, is that this model achieves a slightly lower evaluation accuracy when compared to the model without data augmentation. The reason for this, is that this model needs more epochs to train. To spot this issue, check that for the model without data augmentation, the training accuracy reached almost 100%, whereas the augmented one can still improve. \n"
+    "Another point worth mentioning, is that this model achieves a slightly lower evaluation accuracy when compared to the model without data augmentation. The reason for this, is that this model needs more epochs to train. To spot this issue, check that for the model without data augmentation, the training accuracy reached almost 100%, whereas the augmented one can still improve.\n"
    ]
   },
   {
@@ -1331,9 +1340,9 @@
    "source": [
     "## Wrapping it up\n",
     "\n",
-    "**Congratulations on finishing this ungraded lab!** \n",
+    "**Congratulations on finishing this ungraded lab!**\n",
     "\n",
-    "It is quite amazing to see how data alone can impact Deep Learning models. Hopefully this lab helped you have a better understanding of the importance of data. \n",
+    "It is quite amazing to see how data alone can impact Deep Learning models. Hopefully this lab helped you have a better understanding of the importance of data.\n",
     "\n",
     "In particular, you figured out ways to diagnose the effects of class imbalance and looked at specific metrics to spot this problem. Adding more data is a simple way to overcome class imbalance. However, this is not always feasible in a real life scenario.\n",
     "\n",
@@ -1345,13 +1354,14 @@
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
   "colab": {
-   "collapsed_sections": [],
+   "gpuType": "T4",
    "name": "C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb",
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1365,7 +1375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
